<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="shell_discover">DISCOVER</string>
    <string name="shell_profile">PROFILE</string>
</resources>
